# TextEditor

./: .gitignore  CAD.py  CLAUDE.md  CODEBASE_REFERENCE.md  README.md  bowyerwatson.py  camera.py  constructor.py  cursor.py  data_structures.txt  editor.py  imgui.ini  line.py  main.py  mesh_audit.py  mesher.py  physics_editor.py  point.py  pyproject.toml  quad.py  snapengine.py  solver.py  test_force_balance.py  test_holes.py  test_state_transitions.py  triangle.py  triangulation.py
__pycache__/: solver._jit_assemble_momentum_rhs-91.py311.1.nbc  solver._jit_assemble_momentum_rhs-91.py311.nbi  solver._jit_assemble_pcorr_rhs-138.py311.1.nbc  solver._jit_assemble_pcorr_rhs-138.py311.nbi  solver._jit_calc_pressure_gradients-16.py311.1.nbc  solver._jit_calc_pressure_gradients-16.py311.nbi  solver._jit_update_flux_diff-49.py311.1.nbc  solver._jit_update_flux_diff-49.py311.nbi
cfdeditor/: __init__.py  api.py  app_state.py  bowyerwatson.py  camera.py  constructor.py  editor.py  geometry_helpers.py  line.py  main.py  meshIO.py  mesh_quality.py  mesher.py  physics_editor.py  quad.py  renderer.py  solver.py  solver_panel.py  triangle.py  visualizer.py
validation/: gci_triplet.m  paraview_export_velocity_poiseuille.py  poiseuille_config.m  read_poiseuille_csv.m  test_gci.m  validate_all.m  validate_diagnostics.m  validate_gci.m  validate_poiseuille.m  validate_pressure.m
