[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cfdeditor"
version = "1.11.0"
description = "Interactive 2D CFD Solver with CAD Frontend — headless scripting API for parametric studies (run_solve, geometry helpers, results save/load)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.4",
    "scipy>=1.17",
    "numba>=0.65",
    "pygame>=2.6",
    "PyOpenGL>=3.1",
    "imgui>=2.0",
    "shapely>=2.1",
    "matplotlib>=3.10",
    "pyamg>=5.3",
]

[project.urls]
Repository = "https://github.com/Venkinta/NFLUIDS"

[project.scripts]
cfdeditor = "cfdeditor.__main__:run_app"